--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  shared_preferences: ^2.5.3
+  flutter_dotenv: ^6.0.0
+  file_selector: ^1.0.3
+  path_provider: ^2.1.5
+  pdfrx: ^1.3.5
+  pdf: ^3.10.8
 
 dev_dependencies:
   flutter_test:
