--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   pdfrx: ^1.3.5
   pdf: ^3.10.8
+  hand_signature: ^3.1.0+2
 
 dev_dependencies:
   flutter_test:
