--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   pdfrx: ^1.3.5
   pdf: ^3.10.8
   hand_signature: ^3.1.0+2
+  image: ^4.2.0
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
