--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   hand_signature: ^3.1.0+2
   image: ^4.2.0
   printing: ^5.14.2
+  result_dart: ^2.1.1
 
 dev_dependencies:
   flutter_test:
