--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,13 @@ dependencies:
   flutter_dotenv: ^6.0.0
   file_selector: ^1.0.3
   path_provider: ^2.1.5
-  pdfrx: ^1.3.5
+  pdfrx: ^2.1.9
   pdf: ^3.10.8
   hand_signature: ^3.1.0+2
   image: ^4.2.0
   printing: ^5.14.2
   result_dart: ^2.1.1
+  go_router: ^16.2.0
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +58,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
+  msix: ^3.16.12
+  json_serializable: ^6.11.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
