--- a/build.yaml
+++ b/build.yaml
@@ -6,6 +6,6 @@ targets:
       - lib/**
       - $package$
     builders:
-      pdf_signature|prune_unused_steps:
+      pdf_signature:
         generate_for:
           - test/features/**
