chore: improve i18n development experience

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,12 @@
 {
     "recommendations": [
         "yzhang.markdown-all-in-one",
-        "alexkrechik.cucumberautocomplete"
+        "alexkrechik.cucumberautocomplete",
+        "google.arb-editor",
+        "dart-code.flutter",
+        "lsaudon.l10nization",  // quick translation gen
+        "oke331.flutter-l10n-helper", // show arb string
+        "gabbygreat.flutter-l10n-checker", // detect hard-coded strings
+        // "joaopinacio.translate-me"
     ]
 }
