--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  flutter_localized_locales: ^2.0.5
 
 dev_dependencies:
   flutter_test:
