feat: add wireframe in docs

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,6 @@ devtools_options.yaml
 test/features/*_test.dart
 **/app_localizations*.dart
 .env
+docs/wireframe.assets/*.excalidraw.svg
+docs/wireframe.assets/*.svg
+node_modules/
