--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
     sdk: flutter
   intl: any
   flutter_localized_locales: ^2.0.5
+  desktop_drop: ^0.5.0
 
 dev_dependencies:
   flutter_test:
