--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,7 @@ docs/wireframe.assets/*.excalidraw.svg
 docs/wireframe.assets/*.svg
 docs/wireframe.assets/*.png
 node_modules/
+AppDir/.DirIcon
+AppDir/bundle/
+appimage-build/
+/*.AppImage
