feat: feat partially implement signature card UI view

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ docs/wireframe.assets/*.excalidraw.svg
 docs/wireframe.assets/*.svg
 docs/wireframe.assets/*.png
 node_modules/
+.vscode/settings.json
