--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,12 @@ dependencies:
   intl: any
   flutter_localized_locales: ^2.0.5
   desktop_drop: ^0.5.0
+  multi_split_view: ^3.6.1
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
   build_runner: ^2.4.12
   build: ^3.0.2
