--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,8 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   plugins:
     - custom_lint
+  exclude: 
+    - 'test/features/*_test.dart'
 
 linter:
   # The lint rules applied to this project can be customized in the
@@ -27,6 +29,12 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    unintended_html_in_doc_comment:
+      exclude:
+        - 'test/features/step/*.dart'
+    unnecessary_import:
+      exclude:
+        - 'test/features/step/*.dart'
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
