--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   msix: ^3.16.12
   json_serializable: ^6.11.0
+  dead_code_analyzer: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
