--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,18 @@
 targets:
   $default:
     sources:
-      - integration_test/**
-      - test/**
+      - integration_test/**   # By default, build runner will not generate code in the integration folder
+      - test/**               # so we override paths for code generation here
       - lib/**
       - $package$
     builders:
+      bdd_widget_test|featureBuilder:
+        generate_for:
+          - test/**
+          - integration_test/**
+      freezed:
+        generate_for:
+          - lib/**
+      json_serializable:
+        generate_for:
+          - lib/**
