--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   share_plus: ^11.1.0
   logging: ^1.3.0
   riverpod_annotation: ^2.6.1
+  colorfilter_generator: ^0.0.8
+  # ml_linalg: ^13.12.6
 
 dev_dependencies:
   flutter_test:
