--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   logging: ^1.3.0
   riverpod_annotation: ^2.6.1
   colorfilter_generator: ^0.0.8
+  flutter_box_transform: ^0.4.7
   # ml_linalg: ^13.12.6
 
 dev_dependencies:
