--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,20 +41,20 @@ dependencies:
   path_provider: ^2.1.5
   pdfrx: ^2.1.9
   pdf: ^3.10.8
+  # printing: ^5.14.2 # extension of pdf pkg
   hand_signature: ^3.1.0+2
   image: ^4.2.0
-  printing: ^5.14.2
   result_dart: ^2.1.1
   go_router: ^16.2.0
   flutter_localizations:
     sdk: flutter
   intl: any
   flutter_localized_locales: ^2.0.5
-  desktop_drop: ^0.5.0
+  desktop_drop: ^0.6.1
   multi_split_view: ^3.6.1
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
-  share_plus: ^11.1.0
+  share_plus: ^12.0.0
   logging: ^1.3.0
   riverpod_annotation: ^2.6.1
   colorfilter_generator: ^0.0.8
