--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   responsive_framework: ^1.5.1
   # disable_web_context_menu: ^1.1.0
   # ml_linalg: ^13.12.6
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
