--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -135,10 +135,11 @@ flutter:
 
 
 flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
   image_path: "assets/icon/pdf_signature-icon.png"
+  android: true
+  ios: true
   min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
   web:
     generate: true
     image_path: "assets/icon/pdf_signature-icon.png"
