--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,14 @@ version: 1.1.0+1
 environment:
   sdk: ^3.7.0
 
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
+
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
