--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: pdf_signature
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -42,28 +42,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_riverpod: ^2.6.1
+  flutter_riverpod: ^3.0.3
   shared_preferences: ^2.5.3
   flutter_dotenv: ^6.0.0
   path_provider: ^2.1.5
-  pdfrx: ^2.1.9
+  pdfrx: ^2.2.16
   pdf: ^3.10.8
   # printing: ^5.14.2 # extension of pdf pkg
   hand_signature: ^3.1.0+2
   image: ^4.2.0
   result_dart: ^2.1.1
-  go_router: ^16.2.0
+  go_router: ^17.0.0
   flutter_localizations:
     sdk: flutter
   intl: any
   flutter_localized_locales: ^2.0.5
-  desktop_drop: ^0.6.1
+  desktop_drop: ^0.7.0
   multi_split_view: ^3.6.1
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   share_plus: ^12.0.0
   logging: ^1.3.0
-  riverpod_annotation: ^2.6.1
+  riverpod_annotation: ^3.0.3
   colorfilter_generator: ^0.0.8
   flutter_box_transform: ^0.4.7
   file_picker: ^10.3.3
@@ -78,12 +78,12 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   build_runner: ^2.4.12
-  build: ^3.0.2
-  bdd_widget_test: ^2.0.1
+  build: ^4.0.3
+  bdd_widget_test: ^2.1.3
   mocktail: ^1.0.4
   freezed: ^3.0.0
-  custom_lint: ^0.7.6
-  riverpod_lint: ^2.6.5
+  # custom_lint: ^0.7.6
+  # riverpod_lint: ^2.6.5
   go_router_builder: ^4.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -140,7 +140,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
 
 flutter_launcher_icons:
   image_path: "assets/icon/pdf_signature-icon.png"
