--- a/.github/workflows/pr-unit-tests.yml
+++ b/.github/workflows/pr-unit-tests.yml
@@ -26,11 +26,18 @@ jobs:
         uses: actions/checkout@v6
         continue-on-error: true
         id: checkout_https
+        with:
+          repository: ${{ github.repository }}
+          ref: refs/pull/${{ github.event.pull_request.number }}/merge
+          fetch-depth: 1
+          persist-credentials: false
 
       - name: Checkout repository via SSH (fallback)
         if: steps.checkout_https.outcome == 'failure'
         uses: actions/checkout@v6
         with:
+          repository: ${{ github.repository }}
+          ref: refs/pull/${{ github.event.pull_request.number }}/merge
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
           ssh-strict: false
 
